# ExtremeLauncher

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  COPYING.md  README.md  flake.nix
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rfc.yml  suggestion.yml
.github/workflows/: backport.yml  build.yml  trigger_release.yml  update-flake.yml  winget.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
flatpak/: extremelauncher  net.extremelauncher.ExtremeLauncher.yml
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  BaseInstance.cpp  BaseInstance.h  BaseVersionList.cpp  CMakeLists.txt  Commandline.cpp  DesktopServices.cpp  Exception.h  FastFileIconProvider.cpp  FastFileIconProvider.h  FileIgnoreProxy.cpp  FileIgnoreProxy.h  FileSystem.cpp  FileSystem.h  GZip.cpp  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  JavaCommon.cpp  Json.cpp  Json.h  LaunchController.cpp  LaunchController.h  LoggedProcess.cpp  LoggedProcess.h  MMCZip.cpp  MMCZip.h  MangoHud.cpp  MangoHud.h  Markdown.cpp  Markdown.h  NullInstance.h  PSaveFile.h  QVariantUtils.h  ResourceDownloadTask.cpp  ResourceDownloadTask.h  RuntimeContext.h  (+9 more)
launcher/filelink/: FileLink.cpp  FileLink.h  filelink_main.cpp
launcher/icons/: IconList.cpp  IconList.h  IconUtils.cpp  IconUtils.h  MMCIcon.cpp  MMCIcon.h
launcher/java/: JavaChecker.cpp  JavaInstall.cpp  JavaInstall.h  JavaInstallList.cpp  JavaMetadata.cpp  JavaMetadata.h  JavaUtils.cpp  JavaUtils.h
launcher/java/download/: ArchiveDownloadTask.cpp  ArchiveDownloadTask.h  ManifestDownloadTask.cpp  ManifestDownloadTask.h  SymlinkTask.cpp  SymlinkTask.h
launcher/launch/: LaunchTask.cpp  LaunchTask.h
launcher/launch/steps/: CheckJava.cpp  PostLaunchCommand.cpp  PreLaunchCommand.cpp  PrintServers.cpp  PrintServers.h  QuitAfterGameStop.cpp  QuitAfterGameStop.h
launcher/minecraft/: AssetsUtils.cpp  Component.cpp  GradleSpecifier.h  LaunchProfile.cpp  LaunchProfile.h  Library.cpp  Library.h  Logging.cpp  Logging.h  MinecraftInstance.cpp  MinecraftInstance.h  MojangVersionFormat.cpp  OneSixVersionFormat.cpp  PackProfile.cpp  PackProfile.h  ProfileUtils.cpp  ProfileUtils.h  Rule.cpp  Rule.h  VersionFile.cpp  VersionFile.h  World.cpp  WorldList.cpp
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AccountList.cpp  AccountList.h  MinecraftAccount.cpp  MinecraftAccount.h
launcher/minecraft/launch/: AutoInstallJava.cpp  AutoInstallJava.h  CreateGameFolders.cpp  LauncherPartLaunch.cpp  MinecraftTarget.cpp  ModMinecraftJar.cpp  ScanModFolders.cpp  VerifyJavaInstall.cpp  VerifyJavaInstall.h
launcher/minecraft/mod/: DataPack.cpp  DataPack.h  MetadataHandler.h  Mod.h  (+14 more)
launcher/modplatform/: ModIndex.cpp  ModIndex.h  ResourceAPI.h
launcher/net/: ApiDownload.cpp  ApiDownload.h  ApiHeaderProxy.h  ApiUpload.cpp  ApiUpload.h  ByteArraySink.h  ChecksumValidator.h  Download.cpp  Download.h  FileSink.cpp  FileSink.h  HeaderProxy.h  HttpMetaCache.cpp  HttpMetaCache.h  Logging.cpp  Logging.h  MetaCacheSink.cpp  MetaCacheSink.h  NetJob.cpp  NetJob.h  NetRequest.cpp  NetRequest.h  NetUtils.h  PasteUpload.cpp  PasteUpload.h  RawHeaderProxy.h  Sink.h  Upload.cpp  Upload.h  Validator.h
launcher/news/: NewsChecker.cpp
launcher/screenshots/: ImgurAlbumCreation.cpp  ImgurAlbumCreation.h  ImgurUpload.cpp  ImgurUpload.h
launcher/settings/: INIFile.cpp  INIFile.h  Setting.h
launcher/tasks/: ConcurrentTask.cpp  ConcurrentTask.h  MultipleOptionsTask.cpp  MultipleOptionsTask.h  SequentialTask.cpp  SequentialTask.h  Task.cpp  Task.h
launcher/tools/: GenericProfiler.cpp  GenericProfiler.h
launcher/translations/: TranslationsModel.cpp
launcher/ui/: GuiUtil.cpp  InstanceWindow.cpp  InstanceWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
launcher/updater/: ExternalUpdater.h  ExtremeExternalUpdater.cpp  ExtremeExternalUpdater.h  MacSparkleUpdater.h  MacSparkleUpdater.mm
libraries/: README.md
libraries/launcher/: CMakeLists.txt
libraries/launcher/legacy/net/extremelauncher/legacy/: LegacyFrame.java  LegacyLauncher.java  LegacyProxy.java
libraries/launcher/legacy/net/extremelauncher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/legacy/net/extremelauncher/legacy/utils/: Base64.java
libraries/launcher/legacy/net/extremelauncher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/legacy/net/extremelauncher/legacy/utils/json/: JsonParseException.java  JsonParser.java
libraries/launcher/legacy/net/extremelauncher/legacy/utils/url/: ByteArrayUrlConnection.java  UrlUtils.java
libraries/launcher/legacy/net/minecraft/: Launcher.java
libraries/launcher/net/extremelauncher/: EntryPoint.java  SystemProperties.java
libraries/launcher/net/extremelauncher/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/net/extremelauncher/launcher/: Launcher.java
libraries/launcher/net/extremelauncher/launcher/impl/: AbstractLauncher.java  StandardLauncher.java
libraries/launcher/net/extremelauncher/legacy/: LegacyProxy.java
libraries/launcher/net/extremelauncher/utils/: Parameters.java  ReflectionUtils.java
libraries/launcher/net/extremelauncher/utils/logging/: Level.java  Log.java
nix/: README.md  unwrapped.nix  wrapper.nix
program_info/: CMakeLists.txt  README.md  extremelauncher.6.scd  extremelauncher.icns  extremelauncher.manifest.in  extremelauncher.qrc  extremelauncher.rc.in  genicons.sh  net.extremelauncher.ExtremeLauncher.desktop.in  net.extremelauncher.ExtremeLauncher.metainfo.xml.in  win_install.nsi.in
tests/: DataPackParse_test.cpp  Library_test.cpp  MetaComponentParse_test.cpp  Packwiz_test.cpp  ResourceFolderModel_test.cpp  ResourcePackParse_test.cpp  ShaderPackParse_test.cpp  TexturePackParse_test.cpp  WorldSaveParse_test.cpp
(+244 files in other folders)
